cabal-version: 2.2
name:
  onesixtyone
version:
  0.1
-- synopsis:
-- description:
-- homepage:
-- bug-reports:
-- license:
-- license-file:
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Utility, Network
build-type:
  Simple
tested-with:
  GHC == 8.8.1

library
  hs-source-dirs:
    src
  exposed-modules:
    SnmpScanner
  build-depends:
    , base
    , bytestring
    , fast-logger
    , ip
    , language-asn
    , optparse-applicative
    , primitive
    , snmp
    , text
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/onesixtyone.git
